# robotiq

robotiq_2f_85_gripper_visualization/: CMakeLists.txt
robotiq_2f_85_gripper_visualization/config/: controller.yaml  robotiq_2f_85.srdf
robotiq_2f_85_gripper_visualization/launch/: 2f_85_model_controller.launch  test_2f_85_model_gazebo.launch
robotiq_2f_85_gripper_visualization/meshes/visual/: robotiq_arg2f_85_base_link.dae
robotiq_2f_85_gripper_visualization/scripts/: simulated_gripper_control.py
robotiq_2f_85_gripper_visualization/urdf/: robotiq_arg2f_85_model_gazebo.xacro  robotiq_arg2f_85_model_macro.xacro  robotiq_arg2f_transmission.xacro
